#------------------------------------------------------------------------------
# Unit Tests CMakeLists.txt
#------------------------------------------------------------------------------
# This file defines all unit tests for the CAE (Content Assimilation Engine)
# and configures them as CTest targets for automated testing.
#
# Tests include:
# - Binary file assimilation
# - Range-based partial transfers
# - Error handling and validation
# - HDF5 format assimilation
# - Globus transfer integration (conditional)
#------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.10)

# Enable testing for CTest
enable_testing()

# Find required dependencies
# yaml-cpp is already found by root CMakeLists.txt

# Conditionally find HDF5 if enabled
if(CLIO_CAE_ENABLE_HDF5)
  # HDF5 is already found by root CMakeLists.txt
  if(NOT HDF5_FOUND)
    message(WARNING "CLIO_CAE_ENABLE_HDF5 is ON but HDF5 not found. HDF5 tests will be disabled.")
    set(HDF5_ENABLED FALSE)
  else()
    set(HDF5_ENABLED TRUE)
  endif()
else()
  set(HDF5_ENABLED FALSE)
endif()

#------------------------------------------------------------------------------
# Helper function to create a unit test
#------------------------------------------------------------------------------
# Creates an executable, links dependencies, and registers with CTest
#
# Arguments:
#   TEST_NAME - Name of the test executable
#   TEST_SOURCE - Path to the test source file (relative to unit/ directory)
#   EXTRA_LIBS - Additional libraries to link (optional)
#   EXTRA_INCLUDES - Additional include directories (optional)
#------------------------------------------------------------------------------
function(add_cae_unit_test TEST_NAME TEST_SOURCE)
  # Parse optional arguments
  set(options "")
  set(oneValueArgs "")
  set(multiValueArgs EXTRA_LIBS EXTRA_INCLUDES)
  cmake_parse_arguments(ARG "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})

  # Create test executable
  add_executable(${TEST_NAME} ${TEST_SOURCE})

  # Link common dependencies
  target_link_libraries(${TEST_NAME}
    PRIVATE
      clio_cae_core_client
      clio_cte_core_client
      clio::run::cxx
      ctp::configure
      ${ARG_EXTRA_LIBS}
  )

  # Add common include directories
  target_include_directories(${TEST_NAME}
    PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}
      ${ARG_EXTRA_INCLUDES}
  )

  # Install test binary
  install(TARGETS ${TEST_NAME} DESTINATION bin)

  # Register with CTest
  add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

  # Set test environment variables
  set_tests_properties(${TEST_NAME} PROPERTIES
    ENVIRONMENT "CLIO_WITH_RUNTIME=1;CLIO_SERVER_CONF=${CMAKE_CURRENT_SOURCE_DIR}/clio_config.yaml;LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500"
    TIMEOUT 300  # 5 minute timeout
  )
endfunction()

#------------------------------------------------------------------------------
# Test 1: Binary File Assimilation
#------------------------------------------------------------------------------
# Tests basic binary file transfer functionality
# - Creates test binary file with patterned data
# - Loads OMNI configuration from YAML
# - Calls ParseOmni to transfer to CTE
# - Validates data integrity in CTE
#------------------------------------------------------------------------------
add_cae_unit_test(cae_binary_assim
  ${CMAKE_CURRENT_SOURCE_DIR}/binary_assim/test_binary_assim.cc
)

# Install test configuration
install(FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/binary_assim/binary_assim_omni.yaml
  DESTINATION share/clio_cae/test/binary_assim
)

#------------------------------------------------------------------------------
# Test 2: Range-Based Partial Transfers
#------------------------------------------------------------------------------
# Tests partial file transfers using range_off and range_size
# - Creates large test file
# - Transfers specific byte ranges
# - Validates correct data and size in CTE
#------------------------------------------------------------------------------
add_cae_unit_test(cae_range_assim
  ${CMAKE_CURRENT_SOURCE_DIR}/range_test/test_range_assim.cc
)

# Set smaller file size for range test to speed up CI
set_tests_properties(cae_range_assim PROPERTIES
  ENVIRONMENT "CLIO_WITH_RUNTIME=1;CLIO_SERVER_CONF=${CMAKE_CURRENT_SOURCE_DIR}/clio_config.yaml;TEST_FILE_SIZE=10;LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500"  # 10MB instead of default
)

#------------------------------------------------------------------------------
# Test 3: Error Handling and Validation
#------------------------------------------------------------------------------
# Tests error cases and validation logic
# - Invalid source paths
# - Invalid format types
# - Missing required fields
# - Malformed URIs
#------------------------------------------------------------------------------
add_cae_unit_test(cae_error_handling
  ${CMAKE_CURRENT_SOURCE_DIR}/error_test/test_error_handling.cc
)

#------------------------------------------------------------------------------
# Test 4: CAE Comprehensive Coverage Tests
#------------------------------------------------------------------------------
# Comprehensive tests for CAE Core APIs to improve code coverage
# - CAE client initialization and pool creation
# - AssimilationCtx constructors and serialization
# - ParseOmni API (binary files, ranges, multiple contexts, error cases)
# - HDF5 dataset processing (basic and error cases)
# - URL parsing and format detection
# - Integration with CTE blob storage
#------------------------------------------------------------------------------
add_executable(test_cae_comprehensive
  ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_comprehensive.cc
)

target_include_directories(test_cae_comprehensive
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}

)

target_link_libraries(test_cae_comprehensive
  PRIVATE
    clio_cae_core_client
    clio_cte_core_client
    clio::run::admin_runtime
    clio::run::bdev_runtime
    ctp::cxx
    ${CMAKE_THREAD_LIBS_INIT}
)

# Install test binary
install(TARGETS test_cae_comprehensive DESTINATION bin)

# Register individual test cases with CTest
add_test(NAME cae_clientinit COMMAND test_cae_comprehensive "[cae][core][init]")
add_test(NAME cae_assimilationctx_default COMMAND test_cae_comprehensive "[cae][ctx]")
add_test(NAME cae_assimilationctx_full COMMAND test_cae_comprehensive "[cae][ctx]")
add_test(NAME cae_assimilationctx_patterns COMMAND test_cae_comprehensive "[cae][ctx]")
add_test(NAME cae_parseomni_binary COMMAND test_cae_comprehensive "[cae][parseomni][binary]")
add_test(NAME cae_parseomni_binaryrange COMMAND test_cae_comprehensive "[cae][parseomni][binary][range]")
add_test(NAME cae_parseomni_multi COMMAND test_cae_comprehensive "[cae][parseomni][multi]")
add_test(NAME cae_parseomni_empty COMMAND test_cae_comprehensive "[cae][parseomni][error]")
add_test(NAME cae_processhdf5_basic COMMAND test_cae_comprehensive "[cae][hdf5]")
add_test(NAME cae_processhdf5_nonexistent COMMAND test_cae_comprehensive "[cae][hdf5][error]")
add_test(NAME cae_processhdf5_emptypath COMMAND test_cae_comprehensive "[cae][hdf5][error]")
add_test(NAME cae_serialization COMMAND test_cae_comprehensive "[cae][ctx][serialization]")
add_test(NAME cae_verifybinarydata COMMAND test_cae_comprehensive "[cae][integration][binary]")
add_test(NAME cae_fileurl COMMAND test_cae_comprehensive "[cae][url]")
add_test(NAME cae_iowarpurl COMMAND test_cae_comprehensive "[cae][url]")
add_test(NAME cae_binaryformat COMMAND test_cae_comprehensive "[cae][format]")
add_test(NAME cae_hdf5format COMMAND test_cae_comprehensive "[cae][format]")
add_test(NAME cae_unknownformat COMMAND test_cae_comprehensive "[cae][format]")

# Set test properties
set_tests_properties(
  cae_clientinit cae_assimilationctx_default cae_assimilationctx_full
  cae_assimilationctx_patterns cae_parseomni_binary cae_parseomni_binaryrange
  cae_parseomni_multi cae_parseomni_empty cae_processhdf5_basic
  cae_processhdf5_nonexistent cae_processhdf5_emptypath cae_serialization
  cae_verifybinarydata cae_fileurl cae_iowarpurl cae_binaryformat
  cae_hdf5format cae_unknownformat
  PROPERTIES
    TIMEOUT 120
    LABELS "coverage;comprehensive;msan_skip"
    ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500"
)

#------------------------------------------------------------------------------
# Test 5: HDF5 Format Assimilation (Conditional)
#------------------------------------------------------------------------------
# Tests HDF5 hierarchical data format support
# - Creates HDF5 file with multiple datasets
# - Tests dataset discovery and transfer
# - Validates metadata and tensor information
# - Tests hierarchical group structures
# Note: Requires CLIO_CORE_ENABLE_HDF5=ON
#------------------------------------------------------------------------------
if(HDF5_ENABLED)
  add_cae_unit_test(cae_hdf5_assim
    ${CMAKE_CURRENT_SOURCE_DIR}/hdf5_assim/test_hdf5_assim.cc
    EXTRA_LIBS ${HDF5_LIBRARIES}
    EXTRA_INCLUDES ${HDF5_INCLUDE_DIRS}
  )

  # Set test labels
  set_tests_properties(cae_hdf5_assim PROPERTIES LABELS "format;hdf5;msan_skip")
endif()

#------------------------------------------------------------------------------
# Test: Cloud Assimilator Factory Guard (always on)
#------------------------------------------------------------------------------
# Exercises AssimilatorFactory protocol dispatch for s3://, gs://, gcs:// — the
# loud-fail guard returns nullptr when a backend is compiled out, and a backend
# when it is compiled in. Touches no cloud service. Links the runtime library
# (where the factory + backends live) and is told which backends are enabled.
#------------------------------------------------------------------------------
add_cae_unit_test(cae_cloud_factory_guard
  ${CMAKE_CURRENT_SOURCE_DIR}/cloud_factory_guard/test_cloud_factory_guard.cc
  EXTRA_LIBS clio_cae_core_runtime
)
if(CAE_ENABLE_S3)
  target_compile_definitions(cae_cloud_factory_guard PRIVATE CAE_ENABLE_S3)
endif()
if(CAE_ENABLE_GCS)
  target_compile_definitions(cae_cloud_factory_guard PRIVATE CAE_ENABLE_GCS)
endif()
set_tests_properties(cae_cloud_factory_guard PROPERTIES LABELS "cloud;factory;msan_skip")

#------------------------------------------------------------------------------
# Test: S3 (s3://) Assimilation (Conditional, self-skips without S3_ENDPOINT)
#------------------------------------------------------------------------------
# Seeds an object into an S3-compatible store (MinIO) and imports it through
# ParseOmni, verifying the bytes landed in CTE. Both seeding and the import run
# the AWS SDK out-of-process via the cae_s3_tool helper, so the test binary links
# NO AWS SDK (linking it would corrupt CLIO runtime startup). Requires
# -DCAE_ENABLE_S3=ON; the test self-skips at runtime unless S3_ENDPOINT is set.
#------------------------------------------------------------------------------
if(CAE_ENABLE_S3)
  add_cae_unit_test(cae_s3_assim
    ${CMAKE_CURRENT_SOURCE_DIR}/s3_assim/test_s3_assim.cc
  )
  set_tests_properties(cae_s3_assim PROPERTIES LABELS "cloud;s3;msan_skip")
  # Build the helper before the test, and point both the test (seeding) and the
  # in-process assimilator (import) at the build-tree helper binary.
  add_dependencies(cae_s3_assim cae_s3_tool)
  set_property(TEST cae_s3_assim APPEND PROPERTY
    ENVIRONMENT "CAE_S3_TOOL=$<TARGET_FILE:cae_s3_tool>")

  install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/s3_assim/s3_assim_omni.yaml
    DESTINATION share/clio_cae/test/s3_assim
  )
endif()

#------------------------------------------------------------------------------
# Test: GCS (gs://) Assimilation (Conditional, self-skips without GCS_ENDPOINT)
#------------------------------------------------------------------------------
# Seeds an object into GCS (fake-gcs-server / real GCS) via google-cloud-cpp,
# imports it through ParseOmni, and verifies the bytes landed in CTE. Requires
# -DCAE_ENABLE_GCS=ON; self-skips at runtime unless GCS_ENDPOINT is set.
#------------------------------------------------------------------------------
if(CAE_ENABLE_GCS)
  add_cae_unit_test(cae_gcs_assim
    ${CMAKE_CURRENT_SOURCE_DIR}/gcs_assim/test_gcs_assim.cc
    EXTRA_LIBS google-cloud-cpp::storage
  )
  set_tests_properties(cae_gcs_assim PROPERTIES LABELS "cloud;gcs;msan_skip")

  install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/gcs_assim/gcs_assim_omni.yaml
    DESTINATION share/clio_cae/test/gcs_assim
  )
endif()

#------------------------------------------------------------------------------
# Test 5: Globus Transfer Integration (Conditional) - REMOVED
#------------------------------------------------------------------------------
# Globus integration testing has been moved to integration tests only
# due to the complexity of OAuth2 authentication and collection-specific scopes.
# See test/integration/globus_matsci/ for Globus integration testing.
#------------------------------------------------------------------------------

#------------------------------------------------------------------------------
# Custom CTest Configuration
#------------------------------------------------------------------------------

# Create test labels for selective execution
# Skip under MSan: CAE tests use uninstrumented HDF5/yaml-cpp/ZMQ deps and
# the clio_run runtime which involves shared memory and forked processes.
set_tests_properties(cae_binary_assim PROPERTIES LABELS "core;basic;msan_skip")
set_tests_properties(cae_range_assim PROPERTIES LABELS "core;advanced;msan_skip")
set_tests_properties(cae_error_handling PROPERTIES LABELS "core;validation;msan_skip")

#------------------------------------------------------------------------------
# Test 6: ExportData Tests
#------------------------------------------------------------------------------
# Tests the ExportData feature (inverse of assimilation):
# - ExportDataTask struct: default ctor, emplace ctor, Copy, Aggregate,
#   SerializeIn, SerializeOut
# - Runtime paths: empty tag, binary success/roundtrip, binary bad path,
#   HDF5 success (if enabled) or HDF5-not-compiled, HDF5 bad path
# - Autogen core_lib_exec.cc kExportData cases exercised via AsyncExportData
#
# NOTE: All ExportData tests are consolidated into two CTest targets (task and
# runtime) to avoid starting the CLIO Runtime runtime multiple times on the same
# port (which causes TIME_WAIT failures for subsequent processes).
#------------------------------------------------------------------------------
add_executable(test_export_data
  ${CMAKE_CURRENT_SOURCE_DIR}/test_export_data.cc
)

target_include_directories(test_export_data
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}

)

target_link_libraries(test_export_data
  PRIVATE
    clio_cae_core_client
    clio_cte_core_client
    clio::run::cxx
    ctp::configure
    ${CMAKE_THREAD_LIBS_INIT}
)

if(HDF5_ENABLED)
  target_compile_definitions(test_export_data PRIVATE CLIO_CAE_ENABLE_HDF5)
  target_link_libraries(test_export_data PRIVATE ${HDF5_LIBRARIES})
  target_include_directories(test_export_data PRIVATE ${HDF5_INCLUDE_DIRS})
endif()

install(TARGETS test_export_data DESTINATION bin)

# Register as two CTest targets: task struct tests and runtime integration tests.
# Each target runs all its test cases in a single process (one runtime startup),
# avoiding port 9413 TIME_WAIT conflicts that arise from repeated restarts.
add_test(NAME cae_exportdata_task
  COMMAND test_export_data "[cae][export][task]")
add_test(NAME cae_exportdata_runtime
  COMMAND test_export_data "[cae][export][runtime]")

set_tests_properties(
  cae_exportdata_task
  cae_exportdata_runtime
  PROPERTIES
    TIMEOUT 300
    LABELS "coverage;export;msan_skip"
    ENVIRONMENT "CLIO_WITH_RUNTIME=1;CLIO_SERVER_CONF=${CMAKE_CURRENT_SOURCE_DIR}/clio_config.yaml;LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500"
)

#------------------------------------------------------------------------------
# Test 7: CAE -> CTE Interceptor Integration Test
#------------------------------------------------------------------------------
# Brings up CAE at pool 512.0 (CTE entrypoint) with next_pool_id 513.0,
# CTE core at 513.0. Validates that CLIO_CTE_CLIENT->{GetOrCreateTag,
# PutBlob, GetBlob} flow through the CAE interceptor and round-trip
# correctly. See GitHub issue #467.
#------------------------------------------------------------------------------
add_executable(test_cae_cte_interceptor
  ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_cte_interceptor.cc
)

target_include_directories(test_cae_cte_interceptor
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/context-runtime/test
)

target_link_libraries(test_cae_cte_interceptor
  PRIVATE
    clio_cae_core_client
    clio_cae_core_runtime
    clio_cte_core_client
    clio_cte_core_runtime
    clio::run::admin_runtime
    clio::run::admin_client
    clio::run::bdev_runtime
    clio::run::bdev_client
    clio::run::cxx
    ctp::cxx
    ctp::configure
    ${CMAKE_THREAD_LIBS_INIT}
)

# Copy compose config next to binary so the test can find it via __FILE__.
add_custom_command(TARGET test_cae_cte_interceptor POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_cte_interceptor_config.yaml
    ${CMAKE_CURRENT_BINARY_DIR}/test_cae_cte_interceptor_config.yaml
)

install(TARGETS test_cae_cte_interceptor DESTINATION bin)

add_test(NAME cae_interceptor_roundtrip
    COMMAND test_cae_cte_interceptor)

set_tests_properties(
    cae_interceptor_roundtrip
    PROPERTIES
        TIMEOUT 180
        LABELS "cae;interceptor;integration;msan_skip"
        RESOURCE_LOCK "clio_runtime"
)

# Tests 8 & 9 (LLM labeling + semantic search) require a running Ollama
# service, so they are gated behind CLIO_CAE_ENABLE_SUMMARY (OFF by default) —
# otherwise they would always be registered and fail on machines without Ollama.
if(CLIO_CAE_ENABLE_SUMMARY)

#------------------------------------------------------------------------------
# Test 8: CAE Transparent Labeling Integration Test (uses local Ollama)
#------------------------------------------------------------------------------
# Brings up CAE with label_matches pointing at a local Ollama instance
# (127.0.0.1:11434, gemma3:1b). Verifies that a PutBlob whose tag+blob
# name matches the rule produces a `{name}_label` blob with non-empty
# contents. CAE_LABEL_TEST_SKIP=1 short-circuits the test for environments
# without Ollama.
#------------------------------------------------------------------------------
add_executable(test_cae_labeling
  ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_labeling.cc
)

target_include_directories(test_cae_labeling
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/context-runtime/test
)

target_link_libraries(test_cae_labeling
  PRIVATE
    clio_cae_core_client
    clio_cae_core_runtime
    clio_cte_core_client
    clio_cte_core_runtime
    clio::run::admin_runtime
    clio::run::admin_client
    clio::run::bdev_runtime
    clio::run::bdev_client
    clio::run::cxx
    ctp::cxx
    ctp::configure
    ${CMAKE_THREAD_LIBS_INIT}
)

add_custom_command(TARGET test_cae_labeling POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_labeling_config.yaml
    ${CMAKE_CURRENT_BINARY_DIR}/test_cae_labeling_config.yaml
)

install(TARGETS test_cae_labeling DESTINATION bin)

add_test(NAME cae_labeling_ollama
    COMMAND test_cae_labeling)

# 5-min timeout — gemma3:1b on CPU is usually under 10s but cold-start
# weights can take longer. msan_skip because libcurl/openssl aren't
# instrumented and we don't run a real LLM under MSan anyway.
set_tests_properties(
    cae_labeling_ollama
    PROPERTIES
        TIMEOUT 300
        LABELS "cae;labeling;ollama;integration;msan_skip"
        RESOURCE_LOCK "clio_runtime"
)

#------------------------------------------------------------------------------
# Test 9: CAE labels 10 docs; CTE SemanticSearch returns top-5
#------------------------------------------------------------------------------
# Puts 10 short documents through CAE (auto-labels via local Ollama),
# then exercises the new CTE/CAE SemanticSearch API: BM25-ranked top-5
# results for a natural-language query. Validates the full
# transparent-labeling → keyword-search pipeline.
#------------------------------------------------------------------------------
add_executable(test_cae_semantic_search
  ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_semantic_search.cc
)

target_include_directories(test_cae_semantic_search
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/context-runtime/test
)

target_link_libraries(test_cae_semantic_search
  PRIVATE
    clio_cae_core_client
    clio_cae_core_runtime
    clio_cte_core_client
    clio_cte_core_runtime
    clio::run::admin_runtime
    clio::run::admin_client
    clio::run::bdev_runtime
    clio::run::bdev_client
    clio::run::cxx
    ctp::cxx
    ctp::configure
    ${CMAKE_THREAD_LIBS_INIT}
)

add_custom_command(TARGET test_cae_semantic_search POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_semantic_search_config.yaml
    ${CMAKE_CURRENT_BINARY_DIR}/test_cae_semantic_search_config.yaml
)

install(TARGETS test_cae_semantic_search DESTINATION bin)

add_test(NAME cae_semantic_search
    COMMAND test_cae_semantic_search)

# 10 sequential Ollama inferences + a server-side BM25 sweep — give
# this enough wall budget for cold-start model load on slower CI.
set_tests_properties(
    cae_semantic_search
    PROPERTIES
        TIMEOUT 600
        LABELS "cae;cte;bm25;semantic-search;ollama;integration;msan_skip"
        RESOURCE_LOCK "clio_runtime"
)

endif()  # CLIO_CAE_ENABLE_SUMMARY

#------------------------------------------------------------------------------
# Test 10: StringDataAssimilator (string:: src + src_data payload)
#------------------------------------------------------------------------------
# Self-contained kServer test: brings up CAE (400.0) and CTE (512.0) as
# peer pools and exercises the new in-memory assimilator path that the
# agentic loop uses to push generated bytes directly into Clio without
# touching the filesystem.
#------------------------------------------------------------------------------
add_executable(test_cae_string_assim
  ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_string_assim.cc
)

target_include_directories(test_cae_string_assim
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/context-runtime/test
)

target_link_libraries(test_cae_string_assim
  PRIVATE
    clio_cae_core_client
    clio_cae_core_runtime
    clio_cte_core_client
    clio_cte_core_runtime
    clio::run::admin_runtime
    clio::run::admin_client
    clio::run::bdev_runtime
    clio::run::bdev_client
    clio::run::cxx
    ctp::cxx
    ctp::configure
    ${CMAKE_THREAD_LIBS_INIT}
)

add_custom_command(TARGET test_cae_string_assim POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_string_assim_config.yaml
    ${CMAKE_CURRENT_BINARY_DIR}/test_cae_string_assim_config.yaml
)

install(TARGETS test_cae_string_assim DESTINATION bin)

add_test(NAME cae_string_assim
    COMMAND test_cae_string_assim)

set_tests_properties(
    cae_string_assim
    PROPERTIES
        TIMEOUT 180
        LABELS "cae;string-assim;integration;msan_skip"
        RESOURCE_LOCK "clio_runtime"
)

#------------------------------------------------------------------------------
# CLIO_FORCE_NET stress variants (one per non-Ollama CAE task-path binary)
#------------------------------------------------------------------------------
# Route every non-Local task through the loopback run-to-run network path so the
# serialize/send/recv/aggregate path is exercised for all CAE assimilation task
# types on a single node. Ollama-gated tests (labeling, semantic_search) are
# excluded because they require a live LLM endpoint.
clio_add_force_net_test(NAME cae_exportdata_force_net
    COMMAND test_export_data
    ENVIRONMENT "CLIO_WITH_RUNTIME=1;CLIO_SERVER_CONF=${CMAKE_CURRENT_SOURCE_DIR}/clio_config.yaml;LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500")
clio_add_force_net_test(NAME cae_comprehensive_force_net
    COMMAND test_cae_comprehensive
    ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500")
clio_add_force_net_test(NAME cae_string_assim_force_net
    COMMAND test_cae_string_assim
    ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH};CLIO_BIND_ADDR=127.0.0.1;CLIO_PORT=10500")

#------------------------------------------------------------------------------
# Test Summary Target
#------------------------------------------------------------------------------
# Custom target to run all tests with verbose output
add_custom_target(run_unit_tests
  COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure --verbose
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  COMMENT "Running all CAE unit tests with verbose output"
  USES_TERMINAL
)

# Custom target to run only core tests
add_custom_target(run_core_tests
  COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure --verbose -L core
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  COMMENT "Running core CAE unit tests"
  USES_TERMINAL
)

#------------------------------------------------------------------------------
# Print Configuration Summary
#------------------------------------------------------------------------------
message(STATUS "")
message(STATUS "CAE Unit Tests Configuration:")
message(STATUS "  Binary Assimilation Test: ENABLED")
message(STATUS "  Range Transfer Test:      ENABLED")
message(STATUS "  Error Handling Test:      ENABLED")
message(STATUS "  ExportData Tests:         ENABLED")
if(HDF5_ENABLED)
  message(STATUS "  HDF5 Format Test:         ENABLED")
  message(STATUS "  ExportData HDF5 Tests:    ENABLED")
else()
  message(STATUS "  HDF5 Format Test:         DISABLED (set -DWRP_CORE_ENABLE_HDF5=ON to enable)")
  message(STATUS "  ExportData HDF5 Tests:    ENABLED (tests not-compiled path)")
endif()
message(STATUS "")
message(STATUS "Run tests with:")
message(STATUS "  make test                 - Run all tests")
message(STATUS "  make run_unit_tests       - Run all tests with verbose output")
message(STATUS "  make run_core_tests       - Run only core tests")
message(STATUS "  ctest -L core             - Run tests with 'core' label")
if(HDF5_ENABLED)
  message(STATUS "  ctest -L hdf5             - Run tests with 'hdf5' label")
endif()
message(STATUS "")

# ------------------------------------------------------------------------------
# Label client (Ollama HTTP) unit tests — uses an in-process HTTP fixture.
# Without libcurl OllamaGenerate is a stub that always fails, so the success
# paths can't pass; only build/register the test when labeling is enabled
# (CAE_LABELING_ENABLED is inherited from core/CMakeLists.txt).
# ------------------------------------------------------------------------------
if(CAE_LABELING_ENABLED)
  add_executable(test_cae_label_client
    ${CMAKE_CURRENT_SOURCE_DIR}/test_cae_label_client.cc
  )

  target_include_directories(test_cae_label_client
    PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}
  )

  target_link_libraries(test_cae_label_client
    PRIVATE
      clio_cae_core_runtime
      clio_cae_core_client
      clio_cte_core_client
      clio::run::admin_runtime
      clio::run::bdev_runtime
      ctp::cxx
      ${CMAKE_THREAD_LIBS_INIT}
  )

  if(WIN32)
    # The in-process HTTP fixture uses Winsock directly.
    target_link_libraries(test_cae_label_client PRIVATE ws2_32)
  endif()

  add_test(NAME cae_label_client_all COMMAND test_cae_label_client)
  # msan_skip: the label client drives HTTP through the uninstrumented
  # libcurl.so (and poll() over its sockets) and prints counts through
  # SimpleTest::print_summary (uninstrumented libstdc++ ostream). All reported
  # reads originate in third-party libraries MSan cannot instrument.
  set_tests_properties(cae_label_client_all PROPERTIES
    TIMEOUT 60
    LABELS "msan_skip"
    ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/bin:$ENV{LD_LIBRARY_PATH}"
  )

  install(TARGETS test_cae_label_client DESTINATION bin)
endif()
